<?xml version="1.0"?>
<package format="2">
  <name>cube_bathymetry</name>
  <version>0.0.0</version>
  <description>Generate a bathymetric surface using UNH CCOM's CUBE algorithm</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_ros</depend>
  <build_depend>libgdal-dev</build_depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  
  <export>
    <nav_core plugin="${prefix}/nav_core_plugin.xml" />
    <project11_navigation plugin="${prefix}/project11_navigation_plugin.xml" />
  </export>
</package>
